--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ ME.xcodeproj/project.xcworkspace/xcuserdata/JohnnyChan.xcuserdatad/UserInterface
 ME.xcodeproj/project.xcworkspace/xcuserdata/chenpingguo.xcuserdatad/UserInterfaceState.xcuserstate
 
 ME.xcodeproj/xcuserdata/JohnnyChan.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+ME.xcodeproj/project.pbxproj
