--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ ME.xcodeproj/project.xcworkspace/xcuserdata/chenpingguo.xcuserdatad/UserInterfac
 ME.xcodeproj/project.pbxproj
 
 ME.xcodeproj/xcuserdata/JohnnyChan.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+ME.xcodeproj/project.pbxproj
